--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "sass": "^1.17.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.6.8"
+    },
+    "dependencies": {
+        "@shopify/draggable": "^1.0.0-beta.8"
     }
 }
