debugbar, permissions for articles with relationship, github navbar

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "predis/predis": "^1.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "beyondcode/laravel-dump-server": "^1.0",
         "brackets/admin-generator": "^3.0",
         "filp/whoops": "^2.0",
