--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,6 @@ DOCKER_PHP_VERSION=7.2
 DOCKER_POSTGRES_VERSION=10
 DOCKER_NODE_VERSION=8
 DOCKER_PHP_XDEBUG=off
+
+#git-hooks
+GIT_HOOKS_IGNORE_DOCKER=false
