--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "barryvdh/laravel-debugbar": "^3.2",
         "beyondcode/laravel-dump-server": "^1.0",
         "brackets/admin-generator": "^3.0",
+        "brackets/code-style-fixer": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
@@ -34,6 +35,10 @@
     "extra": {
         "laravel": {
             "dont-discover": []
+        },
+        "hooks": {
+            "pre-commit": "./vendor/bin/code-style-fixer.sh pre-commit",
+            "pre-push": "./vendor/bin/code-style-fixer.sh pre-push"
         }
     },
     "autoload": {
@@ -53,6 +58,12 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "post-install-cmd": [
+            "[ $COMPOSER_DEV_MODE -eq 0 ] || ./vendor/bin/code-style-fixer.sh git-hooks-add --ignore-lock"
+        ],
+        "post-update-cmd": [
+            "[ $COMPOSER_DEV_MODE -eq 0 ] || ./vendor/bin/code-style-fixer.sh git-hooks-update"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
